--- a/gradle.properties
+++ b/gradle.properties
@@ -9,9 +9,10 @@ org.gradle.jvmargs=-Xmx1G
 
 # Mod Properties
 	mod_version = 1.0.0
-	maven_group = com.example
-	archives_base_name = fabric-example-mod
+	maven_group = com.clemensu42
+	archives_base_name = DavioRPG
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
 	fabric_version=0.29.3+1.16
+	trinkets_version = 2.6.7
